k8s/components/apps/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: node-red-vol
              mountPath: /data
      volumes:
        - name: node-red-vol
          persistentVolumeClaim:
            claimName: pvc-node-red
      restartPolicy: Always
