k8s/components/apps/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  type: ClusterIP
  selector:
    app: node-red 
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
