k8s/components/apps/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "dummy-nodered.example.com" # This will be patched by the overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  number: 1880
